fix masonry alignment

--- a/src/index.html
+++ b/src/index.html
@@ -13,8 +13,8 @@
 <body>
   <div class="wrap">
     <div id="console-selector"></div>
-    <div class="grid container">
-      <div class="item span-row">
+    <div class="container">
+      <div class="item">
         <header>
           <div>
             <h1>John Sylvain</h1>
@@ -27,102 +27,99 @@
         </header>
       </div>
 
-      <div class="item span-row show-interactive">
+      <div class="item show-interactive">
         <div id="resume-selector"></div>
       </div>
 
-      <div class="item span-row hide-interactive">
-        <div class="content">
-          <h3>Hey! 👋</h3>
-          <p>
-            I'm John, a passionate software engineer focused on creating performant JavaScript
-            web applications and developer tools.
-          </p>
-          <p>
-            Currently, I develop large-scale consumer web products at
-            <a href="https://rocketmiles.com" class="link" target="_blank">Rocketmiles</a>.
-          </p>
-        </div>
+      <div class="item content hide-interactive">
+        <h3>Hey! 👋</h3>
+        <p>
+          I'm John, a passionate software engineer focused on creating performant JavaScript
+          web applications and developer tools.
+        </p>
+        <p>
+          Currently, I develop large-scale consumer web products at
+          <a href="https://rocketmiles.com" class="link" target="_blank">Rocketmiles</a>.
+        </p>
       </div>
 
-      <div class="item hide-interactive">
-        <div class="content">
-          <h3>
-            <span class="badge">3</span>
-            <span>Web Apps</span>
-          </h3>
-          <ul class="project">
-            <li>
-              <a href="https://streamit.space" target="_blank">
-                <span class="project__title">Streamit</span>
-                <span class="project__subtitle">Reddit video streamer</span>
-              </a>
-            </li>
-            <li>
-              <a href="https://placemorty.us" target="_blank">
-                <span class="project__title">PlaceMorty</span>
-                <span class="project__subtitle">Placeholder image generator</span>
-              </a>
-            </li>
-            <li>
-              <a href="https://johnsylva.in" target="_blank">
-                <span class="project__title">johnsylva.in</span>
-                <span class="project__subtitle">Personal URL shortener</span>
-              </a>
-            </li>
-          </ul>
-        </div>
-      </div>
+      <div class="masonry hide-interactive">
+        <div class="column">
+          <div class="item content">
+            <h3>
+              <span class="badge">3</span>
+              <span>Web Apps</span>
+            </h3>
+            <ul class="project">
+              <li>
+                <a href="https://streamit.space" target="_blank">
+                  <span class="project__title">Streamit</span>
+                  <span class="project__subtitle">Reddit video streamer</span>
+                </a>
+              </li>
+              <li>
+                <a href="https://placemorty.us" target="_blank">
+                  <span class="project__title">PlaceMorty</span>
+                  <span class="project__subtitle">Placeholder image generator</span>
+                </a>
+              </li>
+              <li>
+                <a href="https://johnsylva.in" target="_blank">
+                  <span class="project__title">johnsylva.in</span>
+                  <span class="project__subtitle">Personal URL shortener</span>
+                </a>
+              </li>
+            </ul>
+          </div>
 
-      <div class="item span-2-vertical hide-interactive">
-        <div class="content">
-          <h3>
-            <span class="badge">4</span>
-            <span>Open Source</span>
-          </h3>
-          <ul class="project">
-            <li>
-              <a href="https://github.com/johnsylvain/pagine" target="_blank">
-                <span class="project__title">pagine</span>
-                <span class="project__subtitle">Client-side website generator</span>
-              </a>
-            </li>
-            <li>
-              <a href="https://github.com/johnsylvain/frecent/" target="_blank">
-                <span class="project__title">frecent</span>
-                <span class="project__subtitle">Object ranking algorithm</span>
-              </a>
-            </li>
-            <li>
-              <a href="https://github.com/johnsylvain/system.css/" target="_blank">
-                <span class="project__title">system.css</span>
-                <span class="project__subtitle">Minimal CSS framework</span>
-              </a>
-            </li>
-            <li>
-              <a href="https://github.com/johnsylvain/object-path-resolve/" target="_blank">
-                <span class="project__title">object-path-resolve</span>
-                <span class="project__subtitle">Tiny object resolver utility</span>
-              </a>
-            </li>
-          </ul>
+          <div class="item span-2-vertical content">
+            <h3>
+              <span class="badge">1</span>
+              <span>Chrome Extensions</span>
+            </h3>
+            <ul class="project">
+              <li>
+                <a href="https://chrome.google.com/webstore/detail/reddit-rshowerthoughts-ne/pcmdclajhocfphjlgbhniglijghlmlfg" target="_blank">
+                  <span class="project__title">Showerthoughts Newtab</span>
+                  <span class="project__subtitle">Newtab replacement</span>
+                </a>
+              </li>
+            </ul>
+          </div>
         </div>
-      </div>
-
-      <div class="item span-2-vertical hide-interactive">
-        <div class="content">
-          <h3>
-            <span class="badge">1</span>
-            <span>Chrome Extensions</span>
-          </h3>
-          <ul class="project">
-            <li>
-              <a href="https://chrome.google.com/webstore/detail/reddit-rshowerthoughts-ne/pcmdclajhocfphjlgbhniglijghlmlfg" target="_blank">
-                <span class="project__title">Showerthoughts Newtab</span>
-                <span class="project__subtitle">Newtab replacement</span>
-              </a>
-            </li>
-          </ul>
+        <div class="column">
+          <div class="item content">
+            <h3>
+              <span class="badge">4</span>
+              <span>Open Source</span>
+            </h3>
+            <ul class="project">
+              <li>
+                <a href="https://github.com/johnsylvain/pagine" target="_blank">
+                  <span class="project__title">pagine</span>
+                  <span class="project__subtitle">Client-side website generator</span>
+                </a>
+              </li>
+              <li>
+                <a href="https://github.com/johnsylvain/frecent/" target="_blank">
+                  <span class="project__title">frecent</span>
+                  <span class="project__subtitle">Object ranking algorithm</span>
+                </a>
+              </li>
+              <li>
+                <a href="https://github.com/johnsylvain/system.css/" target="_blank">
+                  <span class="project__title">system.css</span>
+                  <span class="project__subtitle">Minimal CSS framework</span>
+                </a>
+              </li>
+              <li>
+                <a href="https://github.com/johnsylvain/object-path-resolve/" target="_blank">
+                  <span class="project__title">object-path-resolve</span>
+                  <span class="project__subtitle">Tiny object resolver utility</span>
+                </a>
+              </li>
+            </ul>
+          </div>
         </div>
       </div>
     </div>
