fix copyright date

--- a/src/index.html
+++ b/src/index.html
@@ -127,7 +127,7 @@
     <footer>
       <div class="container">
         <div class="copyright">
-          &copy; John Sylvain <script>document.write(new Date().getFullYear())</script>
+          &copy; John Sylvain <span class="date"></span>
         </div>
         <div>
           <a href="https://github.com/johnsylvain" target="_blank">GitHub</a>
