--- a/src/index.html
+++ b/src/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <title>John Sylvain &#8226; Software Engineer</title>
@@ -10,6 +11,7 @@
   <link rel="icon" href="assets/favicon.png" />
   <link href="https://fonts.googleapis.com/css?family=Source+Code+Pro:400" rel="stylesheet" />
 </head>
+
 <body>
   <div class="wrap">
     <div id="console-selector"></div>
@@ -34,11 +36,10 @@
       <div class="item content hide-interactive">
         <h3>Hey! 👋</h3>
         <p>
-          I'm John, a passionate software engineer focused on creating performant JavaScript
-          web applications and developer tools.
+          I'm John, a passionate software engineer focused on creating performant JavaScript web applications and developer tools.
         </p>
         <p>
-          Currently, I develop large-scale consumer web products at
+          Currently, I develop consumer web products at
           <a href="https://rocketmiles.com" class="link" target="_blank">Rocketmiles</a>.
         </p>
       </div>
@@ -90,7 +91,7 @@
         <div class="column">
           <div class="item content">
             <h3>
-              <span class="badge">4</span>
+              <span class="badge">5</span>
               <span>Open Source</span>
             </h3>
             <ul class="project">
@@ -104,6 +105,12 @@
                 <a href="https://github.com/johnsylvain/frecent/" target="_blank">
                   <span class="project__title">frecent</span>
                   <span class="project__subtitle">Object ranking algorithm</span>
+                </a>
+              </li>
+              <li>
+                <a href="https://github.com/johnsylvain/kobra" target="_blank">
+                  <span class="project__title">kobra</span>
+                  <span class="project__subtitle">JavaScript Framework</span>
                 </a>
               </li>
               <li>
@@ -127,7 +134,8 @@
     <footer>
       <div class="container">
         <div class="copyright">
-          &copy; John Sylvain <span class="date"></span>
+          &copy; John Sylvain
+          <span class="date"></span>
         </div>
         <div>
           <a href="https://github.com/johnsylvain" target="_blank">GitHub</a>
@@ -138,13 +146,24 @@
   </div>
 
   <!-- Shh... Easter Egg -->
-  <div class="trash"><img src="assets/trash.png" alt="" /></div>
-  <div class="trash trash__front"><img src="assets/trash-front.png" alt="" /></div>
+  <div class="trash">
+    <img src="assets/trash.png" alt="" />
+  </div>
+  <div class="trash trash__front">
+    <img src="assets/trash-front.png" alt="" />
+  </div>
   <script>
-    (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-    (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-    m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-    })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+    (function (i, s, o, g, r, a, m) {
+      i['GoogleAnalyticsObject'] = r;
+      i[r] = i[r] || function () {
+        (i[r].q = i[r].q || []).push(arguments)
+      }, i[r].l = 1 * new Date();
+      a = s.createElement(o),
+        m = s.getElementsByTagName(o)[0];
+      a.async = 1;
+      a.src = g;
+      m.parentNode.insertBefore(a, m)
+    })(window, document, 'script', 'https://www.google-analytics.com/analytics.js', 'ga');
 
     ga('create', 'UA-60696638-3', 'auto');
     ga('send', 'pageview');
@@ -152,4 +171,5 @@
   <script src="https://cdn.polyfill.io/v2/polyfill.min.js"></script>
   <script src="./js/app.js"></script>
 </body>
+
 </html>
