update resume content and eslint configs

--- a/src/index.html
+++ b/src/index.html
@@ -10,6 +10,7 @@
   <meta name="author" content="John Sylvain">
   <link rel="icon" href="assets/favicon.png" />
   <link href="https://fonts.googleapis.com/css?family=Source+Code+Pro:400" rel="stylesheet" />
+  <link rel="stylesheet" href="./styles/style.scss">
 </head>
 
 <body>
@@ -110,7 +111,7 @@
               <li>
                 <a href="https://github.com/johnsylvain/kobra" target="_blank">
                   <span class="project__title">kobra</span>
-                  <span class="project__subtitle">JavaScript Framework</span>
+                  <span class="project__subtitle">JavaScript Framework [WIP]</span>
                 </a>
               </li>
               <li>
