update design and improve animations

--- a/src/index.html
+++ b/src/index.html
@@ -9,7 +9,7 @@
   <meta name="keywords" content="John Sylvain,web development,html,css,javascript,software,preact,nodejs,react,redux,fullstack,frontend">
   <meta name="author" content="John Sylvain">
   <link rel="icon" href="assets/favicon.png" />
-  <link href="https://fonts.googleapis.com/css?family=Source+Code+Pro:400" rel="stylesheet" />
+  <link href="https://fonts.googleapis.com/css?family=Karla:400,700|Source+Code+Pro" rel="stylesheet">
   <link rel="stylesheet" href="./styles/style.scss">
 </head>
 
@@ -30,7 +30,7 @@
         </header>
       </div>
 
-      <div class="item show-interactive">
+      <div class="item item--inverse show-interactive">
         <div id="resume-selector"></div>
       </div>
 
@@ -47,7 +47,7 @@
 
       <div class="masonry hide-interactive">
         <div class="column">
-          <div class="item content">
+          <div class="item item--inverse content">
             <h3>
               <span class="badge">3</span>
               <span>Web Apps</span>
@@ -74,7 +74,7 @@
             </ul>
           </div>
 
-          <div class="item span-2-vertical content">
+          <div class="item item--inverse span-2-vertical content">
             <h3>
               <span class="badge">1</span>
               <span>Chrome Extensions</span>
@@ -90,9 +90,9 @@
           </div>
         </div>
         <div class="column">
-          <div class="item content">
+          <div class="item item--inverse content">
             <h3>
-              <span class="badge">5</span>
+              <span class="badge">4</span>
               <span>Open Source</span>
             </h3>
             <ul class="project">
@@ -112,12 +112,6 @@
                 <a href="https://github.com/johnsylvain/kobra" target="_blank">
                   <span class="project__title">kobra</span>
                   <span class="project__subtitle">JavaScript Framework [WIP]</span>
-                </a>
-              </li>
-              <li>
-                <a href="https://github.com/johnsylvain/system.css/" target="_blank">
-                  <span class="project__title">system.css</span>
-                  <span class="project__subtitle">Minimal CSS framework</span>
                 </a>
               </li>
               <li>
