update projects and code cleanup

--- a/src/index.html
+++ b/src/index.html
@@ -92,7 +92,7 @@
         <div class="column">
           <div class="item item--inverse content">
             <h3>
-              <span class="badge">4</span>
+              <span class="badge">5</span>
               <span>Open Source</span>
             </h3>
             <ul class="project">
@@ -103,21 +103,27 @@
                 </a>
               </li>
               <li>
+                <a href="https://github.com/johnsylvain/kobra" target="_blank">
+                  <span class="project__title">kobra</span>
+                  <span class="project__subtitle">JavaScript Framework</span>
+                </a>
+              </li>
+              <li>
+                <a href="https://github.com/johnsylvain/air-router/" target="_blank">
+                  <span class="project__title">air-router</span>
+                  <span class="project__subtitle">Small browser route handler</span>
+                </a>
+              </li>
+              <li>
                 <a href="https://github.com/johnsylvain/frecent/" target="_blank">
                   <span class="project__title">frecent</span>
                   <span class="project__subtitle">Object ranking algorithm</span>
                 </a>
               </li>
               <li>
-                <a href="https://github.com/johnsylvain/kobra" target="_blank">
-                  <span class="project__title">kobra</span>
-                  <span class="project__subtitle">JavaScript Framework [WIP]</span>
-                </a>
-              </li>
-              <li>
                 <a href="https://github.com/johnsylvain/object-path-resolve/" target="_blank">
                   <span class="project__title">object-path-resolve</span>
-                  <span class="project__subtitle">Tiny object resolver utility</span>
+                  <span class="project__subtitle">Tiny object path resolver</span>
                 </a>
               </li>
             </ul>
