--- a/src/index.html
+++ b/src/index.html
@@ -126,6 +126,11 @@
                   <span class="project__subtitle">Tiny object path resolver</span>
                 </a>
               </li>
+              <li>
+                <a href="https://github.com/johnsylvain/git-cleanup/" target="_blank">
+                  <span class="project__title">git-cleanup</span>
+                  <span class="project__subtitle">Git addon</span></a>
+                </li>
             </ul>
           </div>
         </div>
