--- a/src/index.html
+++ b/src/index.html
@@ -4,13 +4,20 @@
 <head>
   <meta charset="UTF-8">
   <title>John Sylvain &#8226; Software Engineer</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <meta name="description" content="I am a software engineer focused on creating performant JavaScript web applications and developer tools.">
-  <meta name="keywords" content="John Sylvain,web development,html,css,javascript,software,preact,nodejs,react,redux,fullstack,frontend">
-  <meta name="author" content="John Sylvain">
-  <link rel="icon" href="assets/favicon.png" />
-  <link href="https://fonts.googleapis.com/css?family=Karla:400,700|Source+Code+Pro" rel="stylesheet">
-  <link rel="stylesheet" href="./styles/style.scss">
+  <meta name="viewport"
+    content="width=device-width, initial-scale=1">
+  <meta name="description"
+    content="I am a software engineer focused on creating performant JavaScript web applications and developer tools.">
+  <meta name="keywords"
+    content="John Sylvain,web development,html,css,javascript,software,preact,nodejs,react,redux,fullstack,frontend">
+  <meta name="author"
+    content="John Sylvain">
+  <link rel="icon"
+    href="assets/favicon.png" />
+  <link href="https://fonts.googleapis.com/css?family=Karla:400,700|Source+Code+Pro"
+    rel="stylesheet">
+  <link rel="stylesheet"
+    href="./styles/style.scss">
 </head>
 
 <body>
@@ -24,8 +31,10 @@
             <p>Software Engineer</p>
           </div>
           <nav class="nav mobile-hide">
-            <a href="#/" class="active round-link">Porfolio</a>
-            <a href="#/resume" class="round-link">Resume</a>
+            <a href="#/"
+              class="active round-link">Porfolio</a>
+            <a href="#/resume"
+              class="round-link">Resume</a>
           </nav>
         </header>
       </div>
@@ -37,11 +46,14 @@
       <div class="item content hide-interactive">
         <h3>Hey! 👋</h3>
         <p>
-          I'm John, a passionate software engineer focused on creating performant JavaScript web applications and developer tools.
+          I'm John, a passionate software engineer focused on creating performant JavaScript web applications and
+          developer tools.
         </p>
         <p>
           Currently, I develop consumer web products at
-          <a href="https://rocketmiles.com" class="link" target="_blank">Rocketmiles</a>.
+          <a href="https://rocketmiles.com"
+            class="link"
+            target="_blank">Rocketmiles</a>.
         </p>
       </div>
 
@@ -54,19 +66,22 @@
             </h3>
             <ul class="project">
               <li>
-                <a href="https://streamit.space" target="_blank">
+                <a href="https://streamit.space"
+                  target="_blank">
                   <span class="project__title">Streamit</span>
                   <span class="project__subtitle">Reddit video streamer</span>
                 </a>
               </li>
               <li>
-                <a href="https://placemorty.us" target="_blank">
+                <a href="https://placemorty.us"
+                  target="_blank">
                   <span class="project__title">PlaceMorty</span>
                   <span class="project__subtitle">Placeholder image generator</span>
                 </a>
               </li>
               <li>
-                <a href="https://johnsylva.in" target="_blank">
+                <a href="https://johnsylva.in"
+                  target="_blank">
                   <span class="project__title">johnsylva.in</span>
                   <span class="project__subtitle">Personal URL shortener</span>
                 </a>
@@ -81,7 +96,8 @@
             </h3>
             <ul class="project">
               <li>
-                <a href="https://chrome.google.com/webstore/detail/reddit-rshowerthoughts-ne/pcmdclajhocfphjlgbhniglijghlmlfg" target="_blank">
+                <a href="https://chrome.google.com/webstore/detail/reddit-rshowerthoughts-ne/pcmdclajhocfphjlgbhniglijghlmlfg"
+                  target="_blank">
                   <span class="project__title">Showerthoughts Newtab</span>
                   <span class="project__subtitle">Newtab replacement</span>
                 </a>
@@ -97,40 +113,46 @@
             </h3>
             <ul class="project">
               <li>
-                <a href="https://github.com/johnsylvain/pagine" target="_blank">
+                <a href="https://github.com/johnsylvain/pagine"
+                  target="_blank">
                   <span class="project__title">pagine</span>
                   <span class="project__subtitle">Client-side website generator</span>
                 </a>
               </li>
               <li>
-                <a href="https://github.com/johnsylvain/kobra" target="_blank">
+                <a href="https://github.com/johnsylvain/kobra"
+                  target="_blank">
                   <span class="project__title">kobra</span>
                   <span class="project__subtitle">JavaScript Framework</span>
                 </a>
               </li>
               <li>
-                <a href="https://github.com/johnsylvain/air-router/" target="_blank">
+                <a href="https://github.com/johnsylvain/air-router/"
+                  target="_blank">
                   <span class="project__title">air-router</span>
                   <span class="project__subtitle">Small browser route handler</span>
                 </a>
               </li>
               <li>
-                <a href="https://github.com/johnsylvain/frecent/" target="_blank">
+                <a href="https://github.com/johnsylvain/frecent/"
+                  target="_blank">
                   <span class="project__title">frecent</span>
                   <span class="project__subtitle">Object ranking algorithm</span>
                 </a>
               </li>
               <li>
-                <a href="https://github.com/johnsylvain/object-path-resolve/" target="_blank">
+                <a href="https://github.com/johnsylvain/object-path-resolve/"
+                  target="_blank">
                   <span class="project__title">object-path-resolve</span>
                   <span class="project__subtitle">Tiny object path resolver</span>
                 </a>
               </li>
               <li>
-                <a href="https://github.com/johnsylvain/git-cleanup/" target="_blank">
+                <a href="https://github.com/johnsylvain/git-cleanup/"
+                  target="_blank">
                   <span class="project__title">git-cleanup</span>
                   <span class="project__subtitle">Git addon</span></a>
-                </li>
+              </li>
             </ul>
           </div>
         </div>
@@ -144,8 +166,10 @@
           <span class="date"></span>
         </div>
         <div>
-          <a href="https://github.com/johnsylvain" target="_blank">GitHub</a>
-          <a href="https://linkedin.com/in/johnsylvain" target="_blank">LinkedIn</a>
+          <a href="https://github.com/johnsylvain"
+            target="_blank">GitHub</a>
+          <a href="https://linkedin.com/in/johnsylvain"
+            target="_blank">LinkedIn</a>
         </div>
       </div>
     </footer>
@@ -153,10 +177,12 @@
 
   <!-- Shh... Easter Egg -->
   <div class="trash">
-    <img src="assets/trash.png" alt="" />
+    <img src="assets/trash.png"
+      alt="" />
   </div>
   <div class="trash trash__front">
-    <img src="assets/trash-front.png" alt="" />
+    <img src="assets/trash-front.png"
+      alt="" />
   </div>
   <script>
     (function (i, s, o, g, r, a, m) {
