combine resume and console render functions

--- a/src/index.html
+++ b/src/index.html
@@ -22,7 +22,6 @@
 
 <body>
   <div class="wrap">
-    <div id="console-selector"></div>
     <div class="container">
       <div class="item">
         <header>
@@ -39,9 +38,7 @@
         </header>
       </div>
 
-      <div class="item item--inverse show-interactive">
-        <div id="resume-selector"></div>
-      </div>
+      <div id="app-selector"></div>
 
       <div class="item content hide-interactive">
         <h3>Hey! 👋</h3>
@@ -162,8 +159,7 @@
     <footer>
       <div class="container">
         <div class="copyright">
-          &copy; John Sylvain
-          <span class="date"></span>
+          &copy; John Sylvain 2018
         </div>
         <div>
           <a href="https://github.com/johnsylvain"
