--- a/src/index.html
+++ b/src/index.html
@@ -197,7 +197,7 @@
     ga('send', 'pageview');
   </script>
   <script src="https://cdn.polyfill.io/v2/polyfill.min.js"></script>
-  <script src="./js/app.js"></script>
+  <script src="./index.js"></script>
 </body>
 
 </html>
