--- a/src/index.html
+++ b/src/index.html
@@ -14,7 +14,7 @@
     content="John Sylvain">
   <link rel="icon"
     href="assets/favicon.png" />
-  <link href="https://fonts.googleapis.com/css?family=Karla:400,700|Source+Code+Pro"
+  <link href="https://fonts.googleapis.com/css?family=Source+Code+Pro"
     rel="stylesheet">
   <link rel="stylesheet"
     href="./styles/style.scss">
