update projects and resume

--- a/src/index.html
+++ b/src/index.html
@@ -63,6 +63,13 @@
             </h3>
             <ul class="project">
               <li>
+                <a href="https://slackcolors.com"
+                  target="_blank">
+                  <span class="project__title">Slack Colors</span>
+                  <span class="project__subtitle">AI Slack themes</span>
+                </a>
+              </li>
+              <li>
                 <a href="https://streamit.space"
                   target="_blank">
                   <span class="project__title">Streamit</span>
@@ -110,17 +117,17 @@
             </h3>
             <ul class="project">
               <li>
-                <a href="https://github.com/johnsylvain/pagine"
-                  target="_blank">
-                  <span class="project__title">pagine</span>
-                  <span class="project__subtitle">Client-side website generator</span>
-                </a>
-              </li>
-              <li>
                 <a href="https://github.com/johnsylvain/kobra"
                   target="_blank">
                   <span class="project__title">kobra</span>
                   <span class="project__subtitle">JavaScript Framework</span>
+                </a>
+              </li>
+              <li>
+                <a href="https://github.com/johnsylvain/pagine"
+                  target="_blank">
+                  <span class="project__title">pagine</span>
+                  <span class="project__subtitle">Client-side website generator</span>
                 </a>
               </li>
               <li>
@@ -144,12 +151,6 @@
                   <span class="project__subtitle">Tiny object path resolver</span>
                 </a>
               </li>
-              <li>
-                <a href="https://github.com/johnsylvain/git-cleanup/"
-                  target="_blank">
-                  <span class="project__title">git-cleanup</span>
-                  <span class="project__subtitle">Git addon</span></a>
-              </li>
             </ul>
           </div>
         </div>
@@ -159,7 +160,7 @@
     <footer>
       <div class="container">
         <div class="copyright">
-          &copy; John Sylvain 2018
+          &copy; John Sylvain 2019
         </div>
         <div>
           <a href="https://github.com/johnsylvain"
