--- a/src/index.html
+++ b/src/index.html
@@ -58,7 +58,7 @@
         <div class="column">
           <div class="item item--inverse content">
             <h3>
-              <span class="badge">3</span>
+              <span class="badge">4</span>
               <span>Web Apps</span>
             </h3>
             <ul class="project">
@@ -92,8 +92,38 @@
               </li>
             </ul>
           </div>
-
-          <div class="item item--inverse span-2-vertical content">
+        </div>
+        <div class="column">
+          <div class="item item--inverse content">
+            <h3>
+              <span class="badge">3</span>
+              <span>Open Source</span>
+            </h3>
+            <ul class="project">
+              <li>
+                <a href="https://github.com/johnsylvain/kobra"
+                  target="_blank">
+                  <span class="project__title">kobra</span>
+                  <span class="project__subtitle">JavaScript Framework</span>
+                </a>
+              </li>
+              <li>
+                <a href="https://github.com/johnsylvain/air-router/"
+                  target="_blank">
+                  <span class="project__title">air-router</span>
+                  <span class="project__subtitle">Small browser route handler</span>
+                </a>
+              </li>
+              <li>
+                <a href="https://github.com/johnsylvain/frecent/"
+                  target="_blank">
+                  <span class="project__title">frecent</span>
+                  <span class="project__subtitle">Object ranking model</span>
+                </a>
+              </li>
+            </ul>
+          </div>
+          <div class="item item--inverse content">
             <h3>
               <span class="badge">1</span>
               <span>Chrome Extensions</span>
@@ -109,51 +139,6 @@
             </ul>
           </div>
         </div>
-        <div class="column">
-          <div class="item item--inverse content">
-            <h3>
-              <span class="badge">5</span>
-              <span>Open Source</span>
-            </h3>
-            <ul class="project">
-              <li>
-                <a href="https://github.com/johnsylvain/kobra"
-                  target="_blank">
-                  <span class="project__title">kobra</span>
-                  <span class="project__subtitle">JavaScript Framework</span>
-                </a>
-              </li>
-              <li>
-                <a href="https://github.com/johnsylvain/pagine"
-                  target="_blank">
-                  <span class="project__title">pagine</span>
-                  <span class="project__subtitle">Client-side website generator</span>
-                </a>
-              </li>
-              <li>
-                <a href="https://github.com/johnsylvain/air-router/"
-                  target="_blank">
-                  <span class="project__title">air-router</span>
-                  <span class="project__subtitle">Small browser route handler</span>
-                </a>
-              </li>
-              <li>
-                <a href="https://github.com/johnsylvain/frecent/"
-                  target="_blank">
-                  <span class="project__title">frecent</span>
-                  <span class="project__subtitle">Object ranking algorithm</span>
-                </a>
-              </li>
-              <li>
-                <a href="https://github.com/johnsylvain/object-path-resolve/"
-                  target="_blank">
-                  <span class="project__title">object-path-resolve</span>
-                  <span class="project__subtitle">Tiny object path resolver</span>
-                </a>
-              </li>
-            </ul>
-          </div>
-        </div>
       </div>
     </div>
 
@@ -163,6 +148,8 @@
           &copy; John Sylvain 2019
         </div>
         <div>
+          <a href="https://blog.johnsylvain.me"
+            target="_blank">Blog</a>
           <a href="https://github.com/johnsylvain"
             target="_blank">GitHub</a>
           <a href="https://linkedin.com/in/johnsylvain"
