remove hash routing

--- a/src/index.html
+++ b/src/index.html
@@ -8,8 +8,6 @@
     content="width=device-width, initial-scale=1">
   <meta name="description"
     content="I am a software engineer focused on creating performant JavaScript web applications and developer tools.">
-  <meta name="keywords"
-    content="John Sylvain,web development,html,css,javascript,software,preact,nodejs,react,redux,fullstack,frontend">
   <meta name="author"
     content="John Sylvain">
   <link rel="icon"
@@ -30,9 +28,9 @@
             <p>Software Engineer</p>
           </div>
           <nav class="nav mobile-hide">
-            <a href="#/"
+            <a data-to="/"
               class="active round-link">Porfolio</a>
-            <a href="#/resume"
+            <a data-to="/resume"
               class="round-link">Resume</a>
           </nav>
         </header>
