FEAT: update projects

--- a/src/index.html
+++ b/src/index.html
@@ -56,7 +56,7 @@
         <div class="column">
           <div class="item item--inverse content">
             <h3>
-              <span class="badge">4</span>
+              <span class="badge">3</span>
               <span>Web Apps</span>
             </h3>
             <ul class="project">
@@ -81,44 +81,6 @@
                   <span class="project__subtitle">Placeholder image generator</span>
                 </a>
               </li>
-              <li>
-                <a href="https://johnsylva.in"
-                  target="_blank">
-                  <span class="project__title">johnsylva.in</span>
-                  <span class="project__subtitle">Personal URL shortener</span>
-                </a>
-              </li>
-            </ul>
-          </div>
-        </div>
-        <div class="column">
-          <div class="item item--inverse content">
-            <h3>
-              <span class="badge">3</span>
-              <span>Open Source</span>
-            </h3>
-            <ul class="project">
-              <li>
-                <a href="https://github.com/johnsylvain/kobra"
-                  target="_blank">
-                  <span class="project__title">kobra</span>
-                  <span class="project__subtitle">JavaScript Framework</span>
-                </a>
-              </li>
-              <li>
-                <a href="https://github.com/johnsylvain/air-router/"
-                  target="_blank">
-                  <span class="project__title">air-router</span>
-                  <span class="project__subtitle">Small browser route handler</span>
-                </a>
-              </li>
-              <li>
-                <a href="https://github.com/johnsylvain/frecent/"
-                  target="_blank">
-                  <span class="project__title">frecent</span>
-                  <span class="project__subtitle">Object ranking model</span>
-                </a>
-              </li>
             </ul>
           </div>
           <div class="item item--inverse content">
@@ -132,6 +94,44 @@
                   target="_blank">
                   <span class="project__title">Showerthoughts Newtab</span>
                   <span class="project__subtitle">Newtab replacement</span>
+                </a>
+              </li>
+            </ul>
+          </div>
+        </div>
+        <div class="column">
+          <div class="item item--inverse content">
+            <h3>
+              <span class="badge">4</span>
+              <span>Open Source</span>
+            </h3>
+            <ul class="project">
+              <li>
+                <a href="https://github.com/johnsylvain/kobra"
+                  target="_blank">
+                  <span class="project__title">kobra</span>
+                  <span class="project__subtitle">JavaScript Framework</span>
+                </a>
+              </li>
+              <li>
+                <a href="https://github.com/johnsylvain/cbb"
+                  target="_blank">
+                  <span class="project__title">cbb</span>
+                  <span class="project__subtitle">College Basketball CLI</span>
+                </a>
+              </li>
+              <li>
+                <a href="https://github.com/johnsylvain/air-router"
+                  target="_blank">
+                  <span class="project__title">air-router</span>
+                  <span class="project__subtitle">Small browser route handler</span>
+                </a>
+              </li>
+              <li>
+                <a href="https://github.com/johnsylvain/frecent"
+                  target="_blank">
+                  <span class="project__title">frecent</span>
+                  <span class="project__subtitle">Object ranking model</span>
                 </a>
               </li>
             </ul>
