FEAT: adjust styling

--- a/src/index.html
+++ b/src/index.html
@@ -54,9 +54,7 @@
             <h4>
               <a href="https://slackcolors.com"
                 class="slack-colors"
-                target="_blank">Slack Colors <svg width="17"
-                  height="18"
-                  viewBox="0 0 17 18"
+                target="_blank">Slack Colors <svg viewBox="0 0 17 18"
                   fill="none"
                   xmlns="http://www.w3.org/2000/svg">
                   <path fill-rule="evenodd"
@@ -77,9 +75,7 @@
             <h4>
               <a href="https://streamit.space"
                 class="streamit"
-                target="_blank">Streamit <svg width="17"
-                  height="18"
-                  viewBox="0 0 17 18"
+                target="_blank">Streamit <svg viewBox="0 0 17 18"
                   fill="none"
                   xmlns="http://www.w3.org/2000/svg">
                   <path fill-rule="evenodd"
@@ -98,9 +94,7 @@
             <h4>
               <a href="https://github.com/johnsylvain/kobra"
                 class="kobra"
-                target="_blank">Kobra <svg width="17"
-                  height="18"
-                  viewBox="0 0 17 18"
+                target="_blank">Kobra <svg viewBox="0 0 17 18"
                   fill="none"
                   xmlns="http://www.w3.org/2000/svg">
                   <path fill-rule="evenodd"
