FEAT: adjust styling

--- a/src/index.html
+++ b/src/index.html
@@ -54,13 +54,7 @@
             <h4>
               <a href="https://slackcolors.com"
                 class="slack-colors"
-                target="_blank">Slack Colors <svg viewBox="0 0 17 18"
-                  fill="none"
-                  xmlns="http://www.w3.org/2000/svg">
-                  <path fill-rule="evenodd"
-                    clip-rule="evenodd"
-                    d="M17 0.00489807V7.0049L14.207 4.2119L6 12.4189L4.586 11.0049L12.793 2.7979L10 0.00489807H17ZM14 17.0049H0V3.0049H8V5.0049H2V15.0049H12V9.0049H14V17.0049Z" />
-                </svg>
+                target="_blank">Slack Colors <span>👉</span>
               </a>
 
             </h4>
@@ -75,32 +69,20 @@
             <h4>
               <a href="https://streamit.space"
                 class="streamit"
-                target="_blank">Streamit <svg viewBox="0 0 17 18"
-                  fill="none"
-                  xmlns="http://www.w3.org/2000/svg">
-                  <path fill-rule="evenodd"
-                    clip-rule="evenodd"
-                    d="M17 0.00489807V7.0049L14.207 4.2119L6 12.4189L4.586 11.0049L12.793 2.7979L10 0.00489807H17ZM14 17.0049H0V3.0049H8V5.0049H2V15.0049H12V9.0049H14V17.0049Z" />
-                </svg>
+                target="_blank">Streamit <span>👉</span>
               </a>
 
             </h4>
             <p class="sub-heading">Streamit is a playlist maker for video content from Reddit.</p>
             <p>Search for your favorite sub-reddit and sit back and enjoy a simplified viewing experience.</p>
-            <p>Streamit is built with Preact and CSS Modules.</p>
+            <p>Streamit is built with Preact and CSS Modules, and is hosted on Netlify.</p>
           </section>
 
           <section class="project">
             <h4>
               <a href="https://github.com/johnsylvain/kobra"
                 class="kobra"
-                target="_blank">Kobra <svg viewBox="0 0 17 18"
-                  fill="none"
-                  xmlns="http://www.w3.org/2000/svg">
-                  <path fill-rule="evenodd"
-                    clip-rule="evenodd"
-                    d="M17 0.00489807V7.0049L14.207 4.2119L6 12.4189L4.586 11.0049L12.793 2.7979L10 0.00489807H17ZM14 17.0049H0V3.0049H8V5.0049H2V15.0049H12V9.0049H14V17.0049Z" />
-                </svg>
+                target="_blank">Kobra <span>👉</span>
               </a>
 
             </h4>
