FEAT: update project descriptions

--- a/src/index.html
+++ b/src/index.html
@@ -39,8 +39,8 @@
           <section class="about">
             <h3>Hey! 👋</h3>
             <p>
-              I'm John, a passionate software engineer focused on creating performant JavaScript web applications and
-              developer tools.
+              I'm John, a passionate software engineer focused on creating beautiful and performant JavaScript web
+              applications.
             </p>
             <p>
               Currently, I develop consumer web products at
@@ -58,11 +58,10 @@
               </a>
 
             </h4>
-            <p class="sub-heading">Slack Colors is a web app for creating beautiful color themes for Slack.</p>
-            <p>It uses a simple voting system to train a Neural Network. In turn, the app generates a set of recommended
-              themes.</p>
-            <p>Slack Colors was featured on <a href="#"
-                class="link">Product Hunt</a>.</p>
+            <p class="sub-heading">Slack Colors is a web app for creating beautiful Slack color themes.</p>
+            <p>It uses a simple voting system to train a client-side neural network. In turn, the app generates a set of
+              recommended themes.</p>
+            <p>Slack Colors uses a custom color generation technique for creating cohesive color schemes.</p>
           </section>
 
           <section class="project">
@@ -74,8 +73,9 @@
 
             </h4>
             <p class="sub-heading">Streamit is a playlist maker for video content from Reddit.</p>
-            <p>Search for your favorite sub-reddit and sit back and enjoy a simplified viewing experience.</p>
-            <p>Streamit is built with Preact and CSS Modules, and is hosted on Netlify.</p>
+            <p>Queue up all the videos from favorite subreddit for a simplified viewing experience.</p>
+            <p>It features a clean UI and leverages the Web Storage API to remember the most recently visited
+              subreddits.</p>
           </section>
 
           <section class="project">
@@ -87,8 +87,10 @@
 
             </h4>
             <p class="sub-heading">Kobra is a minimal JavaScript framework.</p>
-            <p>Kobra includes a built-in router, Redux style actions/state management, and a small bundle size (~2.5 kb
+            <p>It includes a built-in router, Redux style actions/state management, and a small bundle size (~2.5 kb
               gzipped).</p>
+            <p>Kobra is inspired by the ELM architecture and is designed to be an approachable and lightweight
+              framework solution.</p>
           </section>
         </main>
 
