FEAT: update nav links

--- a/src/index.html
+++ b/src/index.html
@@ -29,7 +29,7 @@
           </div>
           <nav class="nav mobile-hide">
             <a data-to="/"
-              class="active round-link">Portfolio</a>
+              class="active round-link">Projects</a>
             <a data-to="/resume"
               class="round-link">Resume</a>
           </nav>
