FEAT: use watchMedia for handling screen resizing

--- a/src/index.html
+++ b/src/index.html
@@ -29,8 +29,10 @@
           </div>
           <nav class="nav mobile-hide">
             <a data-to="/"
+              data-to-active-class="active"
               class="active round-link">Projects</a>
             <a data-to="/resume"
+              data-to-active-class="active"
               class="round-link">Resume</a>
           </nav>
         </header>
@@ -42,8 +44,7 @@
               I'm John, a passionate software engineer focused on creating beautiful and performant JavaScript web
               applications.
             </p>
-            <p>
-              Currently, I develop consumer web products at
+            <p>Currently, I develop consumer web products at
               <a href="https://rocketmiles.com"
                 class="link"
                 target="_blank">Rocketmiles</a>.
@@ -101,6 +102,8 @@
           <div>
             <a href="https://blog.johnsylvain.me"
               target="_blank">Blog</a>
+            <a href="https://music.sylvain.win"
+              target="_blank">Music</a>
             <a href="https://github.com/johnsylvain"
               target="_blank">GitHub</a>
             <a href="https://linkedin.com/in/johnsylvain"
